ganti icon dan gambar pada main activity

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -17,8 +17,10 @@
             <ImageView
                 android:layout_width="90dp"
                 android:layout_height="90dp"
+                android:scaleX="1.2"
+                android:scaleY="1.2"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_tanaman" />
+                android:src="@drawable/ic_tanaman_pot" />
 
         </RelativeLayout>
 
@@ -33,7 +35,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Kumpulan Tanaman Herbal"
+                android:text="Kumpulan Tanaman Obat"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
