--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#64b296</color>
+    <color name="colorPrimary">#41AE94</color>
     <color name="colorPrimaryDark">#0c9869</color>
     <color name="colorAccent">#a7eab7</color>
     <color name="transparent">#ffffff00</color>
